# kafka_replication

./: README.md  shared_structures.h
consumer_bo/: CMakeLists.txt  consumer_librdkafka.cpp  consumer_librdkafka.h  database_writer.cpp  database_writer.h  main.cpp  replication_consumer.h  safe_queue.h
kafka_service/: README.KAFKA.md  server.properties.template
producer_azs/: CMakeLists.txt  config_manager.cpp  config_manager.h  main.cpp  pgoutput_parser.cpp  pgoutput_parser.h  postgresql_replicator.cpp  postgresql_replicator.h  producer_librdkafka.cpp  producer_librdkafka.h  readme  replication_message.cpp  replication_message.h  replicator.conf
services/: rdkafka_consumer.service  rdkafka_producer.service
